# cpu-benchmarks

./: .gitignore  Cargo.toml  justfile  plot.py  readme.org
src/: batch.rs  latency.rs  main.rs  util.rs
